# snr-grad

./: .gitignore  README.md  benchmark.py  benchmark_adaptive_threshold.py  benchmark_dopr.py  benchmark_dopr_existing.py  benchmark_dopr_order.py  benchmark_freeze.py  benchmark_grokfast.py  benchmark_grokking.py  benchmark_hard.py  benchmark_mars_snr.py  benchmark_muon.py  benchmark_regimes.py  benchmark_schedulefree.py  benchmark_spectral.py  benchmark_variance_estimators.py  experiment_runner.py  pyproject.toml
src/snr_grad/: __init__.py  _core.py  activation.py  adaptive.py  variance.py
studies/hyperparameter_study/: gate_analysis.py  hyperparameter_sweep.py
studies/hyperparameter_study/results/: 2a_alpha_sweep.pt  2a_lambda_sweep.pt  2a_rho_sweep.pt  2c_dataset_size.pt
tests/: test_activation.py  test_adaptive_threshold.py  test_advanced.py  test_dopr_order.py  test_freeze.py  test_functional.py  test_mars_snr_adamw.py  test_matrix_snr_variants.py  test_optimizer.py  test_schedulefree.py  test_snr_muon.py  test_theoretical.py  test_variance.py
