[project]
name = "snr-grad"
version = "0.1.0"
description = "SNR / population-risk preconditioner for AdamW (arXiv:2605.01172)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "torch>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snr_grad"]
